# xmc4800

./: LICENSE  README.md
blinkApp/: CMakeLists.txt  README.md  TOOLCHAIN_arm_none_eabi_cortex.cmake  gdb_flash.txt  startgdbclient.sh  startgdbserver.sh
blinkApp/config/linkerfiles/: linker_script.ld
blinkApp/config/startup/: startup_XMC4800.S
blinkApp/libs/CMSIS/Device/Infenion/: system_XMC4800.c
blinkApp/libs/XMCLib/inc/: xmc_common.h
blinkApp/src/: main.c
